--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Jack Hallam</h1>
-    <p>Connect with me on <a href="https://linkedin.com/in/jack-hallam">LinkedIn</a> or follow me on <a href="https://github.com/jackhallam">Github</a>.</p>
+    <div class="profile_img">
+      <img src="https://gravatar.com/avatar/7443775c6330a3b65a56b57a5c900b39.jpg" />
+    </div>
+    <div>
+      <h1>Jack Hallam</h1>
+      <p>Connect on 💼 <a href="https://linkedin.com/in/jack-hallam">LinkedIn</a> or follow on 💻 <a href="https://github.com/jackhallam">Github</a>.</p>
+    </div>
   </body>
 </html>
